chore(sonarlint): quality gate validation in progress, no critical issues