@@ -1,6 +1,6 @@
 package tn.esprit.msprojectservice.services;
 
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import tn.esprit.msprojectservice.dto.DeliverableDTO;
 import tn.esprit.msprojectservice.entities.Deliverable;
@@ -10,35 +10,36 @@ import tn.esprit.msprojectservice.entities.Task;
 import tn.esprit.msprojectservice.repositories.IDeliverableRepository;
 import tn.esprit.msprojectservice.repositories.IProjectRepository;
 import tn.esprit.msprojectservice.repositories.ITaskRepository;
-
+import tn.esprit.msprojectservice.exceptions.EntityNotFoundException;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class DeliverableServiceImpl implements IDeliverableService {
 
-    @Autowired
-    private IDeliverableRepository deliverableRepository;
+    // ✅ Constantes pour éviter la duplication des strings (Fix strings dupliquées)
+    private static final String LIVRABLE_NOT_FOUND = "Livrable non trouvé avec l'id : ";
+    private static final String PROJET_NOT_FOUND   = "Projet non trouvé avec l'id : ";
+    private static final String TACHE_NOT_FOUND    = "Tâche non trouvée avec l'id : ";
 
-    @Autowired
-    private IProjectRepository projectRepository;
-
-    @Autowired
-    private ITaskRepository taskRepository;
+    private final IDeliverableRepository deliverableRepository;
+    private final IProjectRepository projectRepository;
+    private final ITaskRepository taskRepository;
 
     @Override
     public DeliverableDTO submitDeliverable(Long projectId, DeliverableDTO deliverableDTO) {
+        // ✅ Fix 4 — EntityNotFoundException au lieu de RuntimeException
         Project project = projectRepository.findById(projectId)
-                .orElseThrow(() -> new RuntimeException("Projet non trouvé avec l'id : " + projectId));
+                .orElseThrow(() -> new EntityNotFoundException(PROJET_NOT_FOUND + projectId));
 
         Deliverable deliverable = DeliverableDTO.toEntity(deliverableDTO);
         deliverable.setProject(project);
 
-        // Si le livrable est lié à une tâche (optionnel)
         if (deliverableDTO.getTaskId() != null) {
+            // ✅ Fix 5 — EntityNotFoundException au lieu de RuntimeException
             Task task = taskRepository.findById(deliverableDTO.getTaskId())
-                    .orElseThrow(() -> new RuntimeException("Tâche non trouvée avec l'id : " + deliverableDTO.getTaskId()));
+                    .orElseThrow(() -> new EntityNotFoundException(TACHE_NOT_FOUND + deliverableDTO.getTaskId()));
             deliverable.setTask(task);
         }
 
@@ -51,29 +52,27 @@ public class DeliverableServiceImpl implements IDeliverableService {
         return deliverableRepository.findByProjectId(projectId)
                 .stream()
                 .map(DeliverableDTO::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public DeliverableDTO getDeliverableById(Long id) {
         Deliverable deliverable = deliverableRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Livrable non trouvé avec l'id : " + id));
+                .orElseThrow(() -> new EntityNotFoundException(LIVRABLE_NOT_FOUND + id));
         return DeliverableDTO.fromEntity(deliverable);
     }
 
     @Override
     public DeliverableDTO reviewDeliverable(Long id, DeliverableStatus status, String reviewComment) {
         Deliverable deliverable = deliverableRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Livrable non trouvé avec l'id : " + id));
+                .orElseThrow(() -> new EntityNotFoundException(LIVRABLE_NOT_FOUND + id));
 
-        // Vérifier que le livrable est en attente de review
         if (deliverable.getStatus() != DeliverableStatus.SUBMITTED) {
-            throw new RuntimeException("Ce livrable a déjà été reviewé. Statut actuel : " + deliverable.getStatus());
+            throw new IllegalStateException("Ce livrable a déjà été reviewé. Statut actuel : " + deliverable.getStatus());
         }
 
-        // Seuls APPROVED ou REJECTED sont acceptés pour la review
         if (status != DeliverableStatus.APPROVED && status != DeliverableStatus.REJECTED) {
-            throw new RuntimeException("Le statut de review doit être APPROVED ou REJECTED");
+            throw new IllegalArgumentException("Le statut de review doit être APPROVED ou REJECTED");
         }
 
         deliverable.setStatus(status);
@@ -87,7 +86,7 @@ public class DeliverableServiceImpl implements IDeliverableService {
     @Override
     public void deleteDeliverable(Long id) {
         Deliverable deliverable = deliverableRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Livrable non trouvé avec l'id : " + id));
+                .orElseThrow(() -> new EntityNotFoundException(LIVRABLE_NOT_FOUND + id));
         deliverableRepository.delete(deliverable);
     }
 }
